[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = ["Rodrigo Carvalho <67391818+Dududaro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
